--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -835,5 +835,32 @@
                 "--output_scaling", "True"
             ]
         },
+        {
+            "name": "Eval 5fold superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,rwa,tza,nga,moz,cod",
+                "-train_lvl", "f,f,f,f,f,f",
+                "-test", "uga,rwa,tza,nga,moz,cod",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-adamwr", "0.",
+                "-lstep", "8000",
+                "-rs", "3",
+                "-mm", "d,d,d,d,d,d",
+                "--loss", "laplaceNLL",
+                "--input_scaling", "True",
+                "--output_scaling", "True",
+                "-e5f", "fine-shape-1418,morning-blaze-1415,volcanic-shadow-1416,devoted-snowball-1417,eternal-donkey-1419",
+            ]
+        },
     ]
 }
