--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -819,18 +819,17 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "uga,rwa",
+                "-train", "uga,rwa,tza",
                 "-train_lvl", "f,f",
-                "-test", "uga,rwa",
+                "-test", "uga,rwa,tza",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "200",
                 "--validation_fold", "0",
-                "-mm", "m,m",
+                "-mm", "m,m,m",
                 "--loss", "laplaceNLL",
-                "--custom_sampler_weights", "1,1",
                 "--input_scaling", "True",
                 "--output_scaling", "True"
             ]
