--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -847,7 +847,7 @@
             "args": [ 
                 "-train", "rwa",
                 "-train_lvl", "f,f,f,f,f,f",
-                "-test", "rwa,uga",
+                "-test", "uga,moz,tza,rwa,cod,nga",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
