--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -846,9 +846,9 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "rwa",
+                "-train", "nga,moz,tza",
                 "-train_lvl", "f,f,f,f,f,f",
-                "-test", "uga,moz,tza,rwa,cod,nga",
+                "-test", "nga,moz,tza",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
@@ -856,7 +856,7 @@
                 "-adamwr", "0.",
                 "-lstep", "8000",
                 "-rs", "3",
-                "-mm", "d,d,d,d,d,d",
+                "-mm", "m,m,m",
                 "--loss", "laplaceNLL",
                 "--input_scaling", "True",
                 "--output_scaling", "True",
